csrc/tests/codegen_probes/errors/err_dim_ini_multi.bas
' REJECT: initialised DIM must be one variable at a time.
' zxbparser p_var_decl_ini:694 "Initialized variables must be declared one by one."
Dim a, b As Byte = 5
